- Summary:  Support new prorperty for a dataset column to indicate dimension, measure, attribute
-Bug (s) Resolved:
Ted 15824

- Description:
Add new new prorperty for a dataset column to indicate dimension, measure, attribute

- Tests Description:
Auto Test

- Files Edited:

- Files Added:

- Files Deleted:

- Notes to Build Team:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation: